--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section id="hero">
       <div class="hero-container" data-aos="fade-up">
         <h1>Welcome to Transfluid Engineering</h1>
-        <h2>South Africa's Premier Steel Merchant and Steel Supplier</h2>
+        <h2>South Africa’s Premier Turbo Machines Specialists.</h2>
         <a href="#about" class="btn-get-started scrollto">Get Started</a>
       </div>
     </section><!-- End Hero -->
