last content changes

--- a/index.html
+++ b/index.html
@@ -695,14 +695,14 @@
               <div class="info-box">
                 <i class="bx bx-map"></i>
                 <h3>Our Address</h3>
-                <p>28 Klip Street, Boksburg, GP, 1575</p>
+                <p>1 Bental Avenue, Eastlands Office Park, Regus Building, Boksburg, South Africa</p>
               </div>
             </div>
             <div class="col-lg-4 col-md-6 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="200">
               <div class="info-box">
                 <i class="bx bx-envelope"></i>
                 <h3>Email Us</h3>
-                <p>info@transfluideng.co.za</p>
+                <p>info@transfluidengineering.co.za</p>
               </div>
             </div>
             <div class="col-lg-4 col-md-6 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="300">
@@ -760,11 +760,11 @@
             <div class="col-lg-3 col-md-6 footer-contact">
               <h3>Trans-Fluid Engineering</h3>
               <p>
-                28 Klip Street <br>
-                Boksburg, GP,<br>
+                1 Bental Avenue, Eastlands Office Park <br>
+                Regus Building, Boksburg<br>
                 South Africa <br><br>
                 <strong>Phone:</strong> +27 73 099 6678<br>
-                <strong>Email:</strong> info@transfluideng.co.za<br>
+                <strong>Email:</strong> info@transfluidengineering.co.za<br>
               </p>
             </div>
 
