phone number removed

--- a/index.html
+++ b/index.html
@@ -704,6 +704,8 @@
             <div class="col-lg-4 col-md-6 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="300">
               <div class="info-box">
                 <i class="bx bx-phone-call"></i>
+                <h3>Call Us</h3>
+                <p>+27 82 265 4629 <br> +27 11 736 1100</p>
               </div>
             </div>
           </div>
@@ -757,7 +759,7 @@
                 1 Bental Avenue, Eastlands Office Park <br>
                 Regus Building, Boksburg<br>
                 South Africa <br><br>
-                <strong>Phone:</strong>  <br>
+                <strong>Phone:</strong> +27 82 265 4629<br>
                 <strong>Email:</strong> info@transfluidengineering.co.za<br>
               </p>
             </div>
